crates/native/tests/snapshots/parser_tests__query_with_fragments_and_variables.snap
---
source: crates/native/tests/parser_tests.rs
expression: "parse!(r#\"query GetUser($id: ID!, $withPosts: Boolean!) {\n            user(id: $id) {\n                ...UserFields\n                posts @include(if: $withPosts) { ...PostFields }\n            }\n        }\n        fragment UserFields on User { id name email }\n        fragment PostFields on Post { id title content }\"#)"
---
Document {
    source: Source {
        code: "query GetUser($id: ID!, $withPosts: Boolean!) {\n            user(id: $id) {\n                ...UserFields\n                posts @include(if: $withPosts) { ...PostFields }\n            }\n        }\n        fragment UserFields on User { id name email }\n        fragment PostFields on Post { id title content }",
        file_path: "test.graphql",
        start_line: 1,
    },
    definitions: [
        Executable(
            Operation(
                OperationDefinition {
                    span: Span {
                        start: 0,
                        end: 194,
                    },
                    operation_type: Query,
                    name: Some(
                        Name(
                            "GetUser",
                        ),
                    ),
                    variable_definitions: [
                        VariableDefinition {
                            span: Span {
                                start: 14,
                                end: 25,
                            },
                            variable: VariableName(
                                Name(
                                    "id",
                                ),
                            ),
                            typ: NonNull(
                                Named(
                                    NamedType {
                                        name: TypeName(
                                            Name(
                                                "ID",
                                            ),
                                        ),
                                    },
                                ),
                            ),
                            default_value: None,
                            directives: [],
                        },
                        VariableDefinition {
                            span: Span {
                                start: 24,
                                end: 45,
                            },
                            variable: VariableName(
                                Name(
                                    "withPosts",
                                ),
                            ),
                            typ: NonNull(
                                Named(
                                    NamedType {
                                        name: TypeName(
                                            Name(
                                                "Boolean",
                                            ),
                                        ),
                                    },
                                ),
                            ),
                            default_value: None,
                            directives: [],
                        },
                    ],
                    directives: [],
                    selection_set: SelectionSet {
                        selections: [
                            Field(
                                Field {
                                    span: Span {
                                        start: 60,
                                        end: 184,
                                    },
                                    alias: None,
                                    name: FieldName(
                                        Name(
                                            "user",
                                        ),
                                    ),
                                    arguments: [
                                        Argument {
                                            span: Span {
                                                start: 65,
                                                end: 72,
                                            },
                                            name: ArgumentName(
                                                Name(
                                                    "id",
                                                ),
                                            ),
                                            value: Variable(
                                                Name(
                                                    "id",
                                                ),
                                            ),
                                        },
                                    ],
                                    directives: [],
                                    selection_set: SelectionSet {
                                        selections: [
                                            FragmentSpread(
                                                FragmentSpread {
                                                    span: Span {
                                                        start: 92,
                                                        end: 127,
                                                    },
                                                    fragment_name: FragmentName(
                                                        Name(
                                                            "UserFields",
                                                        ),
                                                    ),
                                                    arguments: [],
                                                    directives: [],
                                                },
                                            ),
                                            Field(
                                                Field {
                                                    span: Span {
                                                        start: 122,
                                                        end: 170,
                                                    },
                                                    alias: None,
                                                    name: FieldName(
                                                        Name(
                                                            "posts",
                                                        ),
                                                    ),
                                                    arguments: [],
                                                    directives: [
                                                        Directive {
                                                            span: Span {
                                                                start: 128,
                                                                end: 152,
                                                            },
                                                            name: DirectiveName(
                                                                Name(
                                                                    "include",
                                                                ),
                                                            ),
                                                            arguments: [
                                                                Argument {
                                                                    span: Span {
                                                                        start: 137,
                                                                        end: 151,
                                                                    },
                                                                    name: ArgumentName(
                                                                        Name(
                                                                            "if",
                                                                        ),
                                                                    ),
                                                                    value: Variable(
                                                                        Name(
                                                                            "withPosts",
                                                                        ),
                                                                    ),
                                                                },
                                                            ],
                                                        },
                                                    ],
                                                    selection_set: SelectionSet {
                                                        selections: [
                                                            FragmentSpread(
                                                                FragmentSpread {
                                                                    span: Span {
                                                                        start: 155,
                                                                        end: 170,
                                                                    },
                                                                    fragment_name: FragmentName(
                                                                        Name(
                                                                            "PostFields",
                                                                        ),
                                                                    ),
                                                                    arguments: [],
                                                                    directives: [],
                                                                },
                                                            ),
                                                        ],
                                                    },
                                                },
                                            ),
                                        ],
                                    },
                                },
                            ),
                        ],
                    },
                },
            ),
        ),
        Executable(
            Fragment(
                FragmentDefinition {
                    span: Span {
                        start: 203,
                        end: 248,
                    },
                    name: FragmentName(
                        Name(
                            "UserFields",
                        ),
                    ),
                    variable_definitions: [],
                    type_condition: TypeName(
                        Name(
                            "User",
                        ),
                    ),
                    directives: [],
                    selection_set: SelectionSet {
                        selections: [
                            Field(
                                Field {
                                    span: Span {
                                        start: 233,
                                        end: 240,
                                    },
                                    alias: None,
                                    name: FieldName(
                                        Name(
                                            "id",
                                        ),
                                    ),
                                    arguments: [],
                                    directives: [],
                                    selection_set: SelectionSet {
                                        selections: [],
                                    },
                                },
                            ),
                            Field(
                                Field {
                                    span: Span {
                                        start: 236,
                                        end: 246,
                                    },
                                    alias: None,
                                    name: FieldName(
                                        Name(
                                            "name",
                                        ),
                                    ),
                                    arguments: [],
                                    directives: [],
                                    selection_set: SelectionSet {
                                        selections: [],
                                    },
                                },
                            ),
                            Field(
                                Field {
                                    span: Span {
                                        start: 241,
                                        end: 248,
                                    },
                                    alias: None,
                                    name: FieldName(
                                        Name(
                                            "email",
                                        ),
                                    ),
                                    arguments: [],
                                    directives: [],
                                    selection_set: SelectionSet {
                                        selections: [],
                                    },
                                },
                            ),
                        ],
                    },
                },
            ),
        ),
        Executable(
            Fragment(
                FragmentDefinition {
                    span: Span {
                        start: 257,
                        end: 305,
                    },
                    name: FragmentName(
                        Name(
                            "PostFields",
                        ),
                    ),
                    variable_definitions: [],
                    type_condition: TypeName(
                        Name(
                            "Post",
                        ),
                    ),
                    directives: [],
                    selection_set: SelectionSet {
                        selections: [
                            Field(
                                Field {
                                    span: Span {
                                        start: 287,
                                        end: 295,
                                    },
                                    alias: None,
                                    name: FieldName(
                                        Name(
                                            "id",
                                        ),
                                    ),
                                    arguments: [],
                                    directives: [],
                                    selection_set: SelectionSet {
                                        selections: [],
                                    },
                                },
                            ),
                            Field(
                                Field {
                                    span: Span {
                                        start: 290,
                                        end: 303,
                                    },
                                    alias: None,
                                    name: FieldName(
                                        Name(
                                            "title",
                                        ),
                                    ),
                                    arguments: [],
                                    directives: [],
                                    selection_set: SelectionSet {
                                        selections: [],
                                    },
                                },
                            ),
                            Field(
                                Field {
                                    span: Span {
                                        start: 296,
                                        end: 305,
                                    },
                                    alias: None,
                                    name: FieldName(
                                        Name(
                                            "content",
                                        ),
                                    ),
                                    arguments: [],
                                    directives: [],
                                    selection_set: SelectionSet {
                                        selections: [],
                                    },
                                },
                            ),
                        ],
                    },
                },
            ),
        ),
    ],
}
